# unko_bot

./: .bat  .dockerignore  .env  .env.example  .gitignore  .typoschecks  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  a.py  achievements.json  bot.bat  bot.py  bot_gui.py  bot_manager.py  bot_manager_GUI.py  bot_markov.py  bot_start.bat  bot_start.txt  chatlog.txt  command_help.json  command_help.txt  filtering.py  pyproject.toml  replace_print.py  requirements.txt  rooms.json  special_log.txt  valorant_agent.txt  valorant_map.txt  weather.json
cogs/: Achievements.py  AegiEffect.py  AegiGenerator.py  AllActionStop.py  AntiSpam.py  AutoRoleAssigner.py  Basic_command.py  BirthdayManager.py  BlackJackFull.py  Calculator.py  GuildList.py  HentaiRank.py  IQDownQuotes.py  IceBot.py  IconCog.py  MagicSpellBot.py  OnionFortune.py  PinManager.py  PizzaGenerator.py  QuoteCog.py  RPGCog.py  RandomNameAuto.py  ReactionGameCog.py  Reload.py  RiddleCog.py  SlashAuto.py  SpamOwnerCog.py  TPStock.py  WikipediaSearch.py  WishBot.py  WorldClock.py  agari_logger.py  apology_detector.py  bot_event.py  bot_markov.py  file_explorer.py  fun.py  fun_games.py  help.py  janken.py  (+16 more)
cogs/agari/: Basic_command.py  RandomNameAuto.py  WishBot.py  nameaga.py  not_find_command.py  test.py
cogs/auto/: AntiSpam.py  bot_event.py
cogs/calc/: Calculator.py
cogs/chat/: agari_logger.py  bot_markov.py
cogs/chat/LLM/: llm_cog.py
cogs/chat/LLM/engine/: pseudo_llm.cpp
cogs/deadfile/: SlashAuto.python
cogs/fun/: Achievements.py  AegiEffect.py  AegiGenerator.py  BirthdayManager.py  BlackJackFull.py  HentaiRank.py  IQDownQuotes.py  IceBot.py  MagicSpellBot.py  OnionFortune.py  PizzaGenerator.py  QuoteCog.py  RPGCog.py  ReactionGameCog.py  RiddleCog.py  TPStock.py  apology_detector.py  fun.py  fun_games.py  janken.py  number.py  roast.py  shiritori.py  slot.py
cogs/owner/: AllActionStop.py  Reload.py  spam.py
cogs/utility/: AutoRoleAssigner.py  GuildList.py  IconCog.py  PinManager.py  WikipediaSearch.py  WorldClock.py  file_explorer.py  help.py  music_full.py  roulette.py  server.py  translate.py  utility_url.py  vote.py  weather.py
data/: aegi.db  votes.db
rpg_data/985151399207788615/: player.json
