[project]
name = "unko-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "deep-translator>=1.11.4",
    "discord>=2.3.2",
    "janome>=0.5.0",
    "logging>=0.4.9.6",
    "path>=17.1.1",
    "psutil>=7.2.2",
    "pyshorteners>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "wikipedia>=1.4.0",
]
[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "ruff>=0.15.17",
    "taplo>=0.9.3",
    "ty>=0.0.49",
]

[tool.ruff]
exclude = [".git", ".venv", "build", "dist", "cogs"]  # cogsは、エラーが多すぎるので除外する。
line-length = 120
indent-width = 4
target-version = "py311"
preview = true # プレビュー機能を利用したいため、有効にする。

[tool.ruff.lint]
mccabe = { max-complexity = 15 }
select = [
  "B",
  "D",
  "E",
  "F",
  "I",
  "N",
  "W",
  "T20",
  "C90",
  "TID252",
  "PGH003",
  "UP",
  "SIM",
  "RUF",
  "PIE",
  "PTH",
  "RET",
  "DTZ",
  "ARG",
  "ASYNC",
  "NPY",
  "PT",
]
ignore = ["D100", "D102", "D400", "D415", "RUF001", "E501", "RUF002", "RUF003", "D107", "D103"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
